--- a/src/components/Translation.module.css
+++ b/src/components/Translation.module.css
@@ -7,3 +7,7 @@
 .translateButton {
   transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;
 }
+
+.textarea{
+  margin-top: 20px;
+}
