--- a/src/components/Translation.module.css
+++ b/src/components/Translation.module.css
@@ -1,9 +1,14 @@
 .middleActions {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .translateButton {
   transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;
+}
+
+.textarea{
+  margin-top: 20px;
 }
