refactor: Исправил недочеты с интерфесом

--- a/src/components/Translation/Translation.module.css
+++ b/src/components/Translation/Translation.module.css
@@ -1,6 +1,19 @@
-.middleActions {
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.gridContainer {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  margin-bottom: 10rem;
+}
+
+.middleActions {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
