--- a/src/components/Translation/Translation.module.css
+++ b/src/components/Translation/Translation.module.css
@@ -13,15 +13,19 @@
 }
 
 .middleActions {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  justify-items: center;
   align-items: center;
+  gap: 10px;
+  padding: 0;
 }
 
-.translateButton {
+.swapButton,
+.translateButton,
+.historyButton {
+  max-width: 100%;
   transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;
-  margin: 0 0 auto 0;
 }
 
 .translationContainer {
@@ -38,8 +42,4 @@
   right: 0;
   margin: 20px;
   background: none;
-}
-
-.swapButton {
-  margin-bottom: auto;
 }
