refactor: Использовал useLocalStorage из mantine вместо своих функций. Поменял стиль вывода даты. Убрал удаление дубликатов из localStorage. Переименовал переменные.

--- a/src/components/Translation/Translation.module.css
+++ b/src/components/Translation/Translation.module.css
@@ -21,11 +21,29 @@
   padding: 0;
 }
 
+.translationActions {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .swapButton,
 .translateButton,
 .historyButton {
   max-width: 100%;
   transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;
+}
+
+.translateButton,
+.historyButton{
+  width: auto; 
+  height: auto; 
+  padding: 12px 24px; 
+  display: flex;
+  align-Items: center;
+  justify-Content: center;
+  border: 1px solid transparent; 
+  border-Radius: 4px; 
 }
 
 .translationContainer {
